prod/ingress-react.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: letsencrypt-campus
spec:
  tls:
    - hosts:
        - cooptation.campus.clusterdiali.me
      secretName: cooptation.campus.clusterdiali.me-tls
  rules:
    - host: cooptation-frontend.campus.clusterdiali.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-serice
                port:
                  number: 80
